--- a/authentication_service/src/main/resources/application-dev.yml
+++ b/authentication_service/src/main/resources/application-dev.yml
@@ -60,11 +60,9 @@ application:
       activation-url : http://localhost:4200/avtivate-account
       resetUrl : http://localhost:4200/resertUrl
 eureka:
-  instance:
-    hostname: localhost
   client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+    service-url:
+      defaultZone: http://20.11.21.61:8761/eureka/
 
 management:
   tracing:
