--- a/application_service/src/main/resources/application.yml
+++ b/application_service/src/main/resources/application.yml
@@ -39,11 +39,9 @@ server:
   port: 8082
 
 eureka:
-  instance:
-    hostname: localhost
   client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+    service-url:
+      defaultZone: http://20.11.21.61:8761/eureka/
 
 management:
   tracing:
