--- a/notification_service/src/main/resources/application.yml
+++ b/notification_service/src/main/resources/application.yml
@@ -1,23 +1,23 @@
 spring:
   application:
     name: notification-service
-  
+
   datasource:
     url: jdbc:mysql://localhost:3306/notifications_db?createDatabaseIfNotExist=true
     username: root
     password:
     driver-class-name: com.mysql.cj.jdbc.Driver
-  
+
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
 
-  eureka:
-    client:
-      serviceUrl:
-        defaultZone: http://localhost:8761/eureka/
+eureka:
+  client:
+    service-url:
+      defaultZone: http://20.11.21.61:8761/eureka/
 
   management:
     tracing:
@@ -37,10 +37,10 @@ spring:
       mail.smtp.timeout: 3000
       mail.smtp.writetimeout: 5000
 
-twilio:
-  accountSid: ${TWILIO_ACCOUNT_SID}
-  authToken: ${TWILIO_AUTH_TOKEN}
-
+  twilio:
+    accountSid: AC63598fb1b3c057cd728745a4c016188e
+    authToken: feb1ef7f7578e67b798c5586b6a577b9
+    phoneNumber: +14437072566
 
 server:
   port: 8085
