--- a/task_service/src/main/resources/application.yml
+++ b/task_service/src/main/resources/application.yml
@@ -29,8 +29,8 @@ server:
 
 eureka:
   client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+    service-url:
+      defaultZone: http://20.11.21.61:8761/eureka/
 
 management:
   tracing:
