--- a/notification_service/src/main/resources/application.yml
+++ b/notification_service/src/main/resources/application.yml
@@ -1,29 +1,23 @@
 spring:
   application:
     name: notification-service
-
   datasource:
-    url: jdbc:mysql://localhost:3306/notifications_db?createDatabaseIfNotExist=true
+    url: jdbc:mysql://localhost:3306/notification?maxAllowedPacket=16777216&createDatabaseIfNotExist=true
     username: root
-    password:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-
+    password: ""
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
-    database-platform: org.hibernate.dialect.MySQL8Dialect
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://20.11.21.61:8761/eureka/
+  cloud:
+    loadbalancer:
+      enabled: true
 
-  management:
-    tracing:
-      sampling:
-        probability: 1.0
-
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
   mail:
     host: smtp.gmail.com
     port: 587
@@ -51,3 +45,13 @@ springdoc:
     path: /v3/api-docs
   swagger-ui:
     path: /swagger-ui.html
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://20.11.21.61:8761/eureka/
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
