--- a/service_discovery/src/main/resources/application.yml
+++ b/service_discovery/src/main/resources/application.yml
@@ -4,16 +4,16 @@ server:
 spring:
   application:
     name: service-registry
+
 eureka:
   instance:
-    hostname: localhost
+    hostname: 20.11.21.61
     prefer-ip-address: true
-    ip-address: 127.0.0.1
+    ip-address: 20.11.21.61
   client:
     register-with-eureka: false
     fetch-registry: false
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-    server:
-      enableSelfPreservation: false
-
+      defaultZone: http://20.11.21.61:${server.port}/eureka/
+  server:
+    enableSelfPreservation: false
