--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -111,7 +111,12 @@ services:
     ports:
       - "8084:8084"
     depends_on:
+      - mysql
       - service-discovery
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/TaskDB?createDatabaseIfNotExist=true
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root
     networks:
       - app-network
 
