--- a/application_service/src/main/resources/application.yml
+++ b/application_service/src/main/resources/application.yml
@@ -41,7 +41,7 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://20.11.21.61:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
 
 management:
   tracing:
