--- a/authentication_service/src/main/resources/application-dev.yml
+++ b/authentication_service/src/main/resources/application-dev.yml
@@ -62,7 +62,7 @@ application:
 eureka:
   client:
     service-url:
-      defaultZone: http://20.11.21.61:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
 
 management:
   tracing:
