--- a/application_service/Dockerfile
+++ b/application_service/Dockerfile
@@ -1,3 +1,20 @@
+# Étape 1 : Builder avec Maven
+FROM maven:3.9.6-eclipse-temurin-17 AS build
+
+WORKDIR /app
+
+# Copier le projet Maven
+COPY . .
+
+# Compiler le projet et générer le JAR
+RUN mvn clean package -DskipTests
+
+# Étape 2 : Exécuter le JAR
 FROM openjdk:17
-COPY target/application_service-0.0.1-SNAPSHOT.jar application.jar
-ENTRYPOINT ["java", "-jar", "application.jar"]
+
+WORKDIR /app
+
+# Copier le JAR depuis l'étape précédente
+COPY --from=build /app/target/*.jar application2.jar
+
+ENTRYPOINT ["java", "-jar", "application2.jar.jar"]
