--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,7 +84,7 @@ services:
       - mysql
       - service-discovery
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/AdmissionDB?createDatabaseIfNotExist=true
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/Admission_DB?createDatabaseIfNotExist=true
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: root
     networks:
@@ -136,7 +136,7 @@ services:
       - app-network
 
 volumes:
-  db_data:
+  db_data2:
 
 networks:
   app-network:
