--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -76,7 +76,7 @@ services:
       - app-network
 
   application-service:
-    build: ./application_service
+    build: ./application2_service
     container_name: application-service
     ports:
       - "8082:8082"
